--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/app.js",
-    "start": "node ./src/app.js"
+    "start": "nodemon ./src/app.js"
   },
   "author": "poutingemoji",
   "license": "ISC",
