--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
+    "graphql": "^15.5.0",
     "mongoose": "^5.12.2",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
